forgot to add bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,3 +11,60 @@
  year = {1994}
 }
 
+
+@BOOK{MHE,
+title = {Mostly Harmless Econometrics: An Empiricist's Companion},
+author = {Angrist and Jorn-Steffen Pischke},
+year = {2009},
+edition = {1},
+publisher = {Princeton University Press},
+abstract = {The core methods in today's econometric toolkit are linear regression for statistical control, instrumental variables methods for the analysis of natural experiments, and differences-in-differences methods that exploit policy changes. In the modern experimentalist paradigm, these techniques address clear causal questions such as: Do smaller classes increase learning? Should wife batterers be arrested? How much does education raise wages? Mostly Harmless Econometrics shows how the basic tools of applied econometrics allow the data to speak. In addition to econometric essentials, Mostly Harmless Econometrics covers important new extensions--regression-discontinuity designs and quantile regression--as well as how to get standard errors right. Joshua Angrist and Jörn-Steffen Pischke explain why fancier econometric techniques are typically unnecessary and even dangerous. The applied econometric methods emphasized in this book are easy to use and relevant for many areas of contemporary social science. An irreverent review of econometric essentials A focus on tools that applied researchers use most Chapters on regression-discontinuity designs, quantile regression, and standard errors Many empirical examples A clear and concise resource with wide applications},
+keywords = {economics; toolkit; econometric; linear; regression; statistics; variables; methods; analysis; natural; experiment; differences; policy; technique; tools; data; discontinuity; quantile; standard; error; social; science; research; design; resource},
+url = {https://EconPapers.repec.org/RePEc:pup:pbooks:8769}
+}
+
+@article{kitagawa,
+author = {Kitagawa, Toru},
+title = {A Test for Instrument Validity},
+journal = {Econometrica},
+volume = {83},
+number = {5},
+pages = {2043-2063},
+keywords = {Treatment effects, instrumental variable, specification test, bootstrap},
+doi = {10.3982/ECTA11974},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.3982/ECTA11974},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.3982/ECTA11974},
+abstract = {This paper develops a specification test for instrument validity in the heterogeneous treatment effect model with a binary treatment and a discrete instrument. The strongest testable implication for instrument validity is given by the condition for nonnegativity of point-identifiable compliers' outcome densities. Our specification test infers this testable implication using a variance-weighted Kolmogorov–Smirnov test statistic. The test can be applied to both discrete and continuous outcome cases, and an extension of the test to settings with conditioning covariates is provided.},
+year = {2015}
+}
+
+
+
+
+
+
+
+@article{RESTAT,
+author = {Mourifié, Ismael and Wan, Yuanyuan},
+title = {Testing Local Average Treatment Effect Assumptions},
+journal = {The Review of Economics and Statistics},
+volume = {99},
+number = {2},
+pages = {305-313},
+year = {2017},
+doi = {10.1162/REST\_a\_00622},
+
+URL = { 
+        https://doi.org/10.1162/REST_a_00622
+    
+},
+eprint = { 
+        https://doi.org/10.1162/REST_a_00622
+    
+}
+,
+    abstract = { In this paper, we propose an easy-to-implement procedure to test the key conditions for the identification and estimation of the local average treatment effect (LATE; Imbens \& Angrist, 1994). We reformulate the testable implications of LATE assumptions as two conditional inequalities, which can be tested in the intersection bounds framework of Chernozhukov, Lee, and Rosen (2013) and easily implemented using the Stata package of Chernozhukov et al. (2015). We apply the proposed tests to the draft eligibility instrument in Angrist (1991), the college proximity instrument in Card (1993), and the same-sex instrument in Angrist and Evans (1998). }
+}
+
+
+
