More first stage write up

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -67,4 +67,22 @@ eprint = {
 }
 
 
+@ARTICLE{Wager_and_Athey,
+       author = {{Wager}, Stefan and {Athey}, Susan},
+        title = "{Estimation and Inference of Heterogeneous Treatment Effects using Random Forests}",
+      journal = {arXiv e-prints},
+     keywords = {Statistics - Methodology, Mathematics - Statistics Theory, Statistics - Machine Learning},
+         year = "2015",
+        month = "Oct",
+          eid = {arXiv:1510.04342},
+        pages = {arXiv:1510.04342},
+archivePrefix = {arXiv},
+       eprint = {1510.04342},
+ primaryClass = {stat.ME},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2015arXiv151004342W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 
